--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-22" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-22" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -190,7 +190,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x13330.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x13331.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -216,7 +216,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="WzYHnaXxNhCAGVrYmvz3oRlFILLcaiyW0NKutLYW7tT74I2gEtFkI/rrxnlTjqK6M/QySRqzuJHdBzXS0yUC8AL5rTvh/WamprD8o5M3JPWtX0c3u5tyT2eIHsgP3zZy" data-form-email="true">
+                        <input type="hidden" value="KuzRj1YL8LDfNKl7Pj6U/KWEIg8TF772gkzI2hTXjXZNegwWHg3iXktKv9zKNvdQbgSf8o+JVnlqFXS0XSjGW6xbetF/vYC0VH/KycSydJrjoZMa2+PDdfRZzYVFNhNW" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
