create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -76,7 +76,7 @@
                             <h3 class="mbr-section-title display-2">OUR BUSINESS IS SLAYING GIANTS.</h3>
 
                             <div class="mbr-section-text">
-                                <p>Sling is a paradigmn shifting web design and development company that specializes in using simple, affordable, yet elegant and effective tools to slay the giant challenges small businesses face,&nbsp;in the same way, David slayed Goliath. <br><br>From logo to web design, we make everything you need to be successful in the "land of the giants", also known as the scary, world wide web. We are committed to meeting your design and development needs with excellence to help you slay the the giants in your business and engineer new realities.&nbsp;</p>
+                                <p>Sling is a paradigmn shifting web design and development company that specializes in using simple, affordable, yet elegant and effective tools to slay the giant challenges small businesses face,&nbsp;in the same way, David slayed Goliath. <br><br>From logos to web design, we make everything you need to be successful in the "land of the giants", also known as the scary, world wide web. We are committed to meeting your design and development needs with excellence to help you slay the the giants in your business and engineer new realities.&nbsp;</p>
                             </div>
 
                             <div class="mbr-section-btn"> <a class="btn btn-danger" href="index.html#msg-box2-c">SIGN UP FOR A CONSULTATION SESSION</a></div>
@@ -203,7 +203,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="Vfumxy6hCNcBeiVyjwcYcQuHerrcv0oE1/Dyus0r79jZmY5JGqLw+Ewt/uK6MUu5OPq8v7feCtvgUWJ/Xet+FrI1YzdplSqKendR6n3C3F/k/YHvyIZWWqWKKFmI9wyq" data-form-email="true">
+                        <input type="hidden" value="Q78wR3KTgcXrbx/Y29PIYDl00CAQEUb3p9n9Y6SOS823BrrcOUy9Ar+GlBu1ucEe7Sn6bA8B0HeLFHcht8IhHoHHJIWHtYk4lN8fAW+iU5Q7IK49tYT/AoanyG9Qxh+3" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
