--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-22" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-22" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -140,7 +140,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Custom Landing Page Website</h4>
                         <h5 class="card-subtitle">Popular Option for Medium- Substantial Budget&nbsp;</h5>
-                        <p class="card-text">This option has all the features of the basic landing page option and also the added benefits of custom made web functions available, such as custom web functions and shopping cart, among other options. &nbsp;This option has intermediate turn around time.<br><br><br><br><br>$ - $$<br><br><strong>$725 - $1000</strong><br></p>
+                        <p class="card-text">This option has all the features of the basic landing page option and also has the added benefits of custom made web functions available, such as a shopping cart, among other options. &nbsp;This option has an intermediate turn around time.<br><br><br><br><br>$ - $$<br><br><strong>$725 - $1000</strong><br></p>
                         
                     </div>
                 </div>
@@ -190,7 +190,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x13331.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x13332.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -216,7 +216,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="KuzRj1YL8LDfNKl7Pj6U/KWEIg8TF772gkzI2hTXjXZNegwWHg3iXktKv9zKNvdQbgSf8o+JVnlqFXS0XSjGW6xbetF/vYC0VH/KycSydJrjoZMa2+PDdfRZzYVFNhNW" data-form-email="true">
+                        <input type="hidden" value="51xCgt8n9DfFM4mwWT8UtC9lCTZ86pnkp52ht9Slj4PwnjUkL2Bin3XlQ26xX2UsjPquENYzY+jRW6favbi5hHj1tw+0P9Fnpu6dctYiPjz4ZUYBvESsG1paqvp1Bqhe" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
