--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-22" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-22" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -153,7 +153,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Custom Multi-Page Website</h4>
                         <h5 class="card-subtitle">Popular Option for Substantial Budget&nbsp;</h5>
-                        <p class="card-text">This option includes all the features of the basic, multi- page &nbsp;website option. It also provides the most room for customization &nbsp; &nbsp;with custom web functions and shopping cart, among other options. This option has a longer turn around time.&nbsp;<br><br><br><br><span style="font-size: 1rem; line-height: 1.5;">$$</span><br><span style="font-size: 1rem; line-height: 1.5;"><br></span><span style="font-size: 1rem; line-height: 1.5;"><strong>$1,000 +</strong><br></span><br></p>
+                        <p class="card-text">This option includes all the features of the basic, multi- page &nbsp;website option. It also provides the most room for customization &nbsp; &nbsp;with custom web functions and shopping cart, among other options. This option has a longer turn around time.&nbsp;<br><br><br><br>$$<br><span style="font-size: 1rem; line-height: 1.5;"><br></span><span style="font-size: 1rem; line-height: 1.5;"><strong>$1,000 +</strong><br></span><br></p>
                         
                     </div>
                 </div>
@@ -190,7 +190,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x13334.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x13335.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -216,7 +216,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="V56WDZA6q29/Xswq5V0277WcEJ9Pn1CEbf/02r1ciNNJaTuVQze9h//QxnJrS2LuxiBR9n0jXC9hPFAzoaDFkakJjXlB4UaiNDynXXddTKssxXytPxL9FR4KNmZtcQzj" data-form-email="true">
+                        <input type="hidden" value="t0XRf8UqgKTHdt9r0nsJ7/xckW0Je0OX5RGb55ytEcHIU91I1bTJbr2fQrhZBlRfVfkhmOyJzMfvKifeRuVJ3HhcNepPy5RGQOFACfUo5BTTD5QXhpKJ89BjEs+eo5fw" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
