--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -203,7 +203,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="1V+ejcLmyxCu3SBU6YjjuLi/7xlxUbLbCdttgu5pxhHX0soTPqb/WsFldDlmtXvUKRbQ2S17vD4Dgr6AAqXen4LSWV7YJjogdOwxrHjx6HQrGgWM5Jv8Rhsa006RcoVh" data-form-email="true">
+                        <input type="hidden" value="BYYK9PzCcnIY5xYpMZUCurmTiLX682OVaeOfoZLD+BFQw8tD9kOXsK8h7xLNOk5xk6QuCnbk8MdYE5KFpAycufoMKrzEaZYe/YqKYZu3gs8eXx1nfHo6PzGHsozwZ2dO" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
