--- a/page6.html
+++ b/page6.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Generator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -174,7 +174,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-1z" style="background-image: url(assets/images/pexels-photo-2000x13334.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-1z" style="background-image: url(assets/images/pexels-photo-2000x13335.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -200,7 +200,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="3hvM8SRsjSqmUrf4tK3HXjZh//GFf94DKMHnyKE6RvggQFH3lsymZpby8baYdUIq6QxUyVj+LJxvjnsaXpt2zWoKytnKgAclEKCHDVhA3+2NUZtC7aCClNHdetrBfPU5" data-form-email="true">
+                        <input type="hidden" value="uHYZylxxbtkQU2fHC0nlMjwzqPX33qTLaAeF3Ur2IliClruUp83cyC5VNsQ/aMtB4vy4Ky5R6mT4jK1uDhLEWqNrcBVLMEROmwuKEH+zi5DzovPGE5lqNUb0bWffhUq5" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
