--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-22" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-22" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -190,7 +190,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x13336.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x13337.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -216,7 +216,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="LxQNtmEi+DCigJz5Yy+/QAZIHc4PeNy8NO6qV2jmeSHbXZc/8a9dqM2kvST0KDnxGc5U27yqLs9cI1Jqi72xQtZqRLFhmyEj7jfcoNJvZX/G2TcQhD0LUGdRUC9sqrVG" data-form-email="true">
+                        <input type="hidden" value="dfvwdMgS1vuPdf0LdEwG16sy3EGpPCbzpfrVIwKTP/jJIF/94Bezlu67gXRGAg3ZwsBMNSiD6PXrcJtse856D7Nb+RH1pMx3FboiGjwTxrMr/xZjCJMRtTsVxnNtNL9X" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
