--- a/page6.html
+++ b/page6.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -174,7 +174,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-1z" style="background-image: url(assets/images/pexels-photo-2000x133324.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-1z" style="background-image: url(assets/images/pexels-photo-2000x1333.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -200,7 +200,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="OTnMMQSn0Rz39nHcs+vc7cEf7dBntljsjl7r5ehnNr/NSd087S3NP5bfAsrsINEGv2xl/tn3JSvsrG1QIawC/woptqJLR0vJMYrR1b5KruiEqhnHts3NA+lRMXhze58C" data-form-email="true">
+                        <input type="hidden" value="JL4N8LuO1jr/JNvZGALeARCABUWrLuTtDgr8GOuM8nE0H9HAFnCm0JOJEz2g0Bmklp/36W0Ck4nkCxves/qd4+oRbkDNVUbTQ6vWOH3cDcOYPcgEcm0vHwAjlQuWbltz" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
