--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -162,7 +162,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Custom Landing Page Website<br><br><br><br></h4>
                         <h5 class="card-subtitle"></h5>
-                        <p class="card-text">This option has all the features of the basic landing page option and also has the added benefits of custom made web functions available, such as a shopping cart, among other options.  This option has an intermediate turn around time.<br><br><br><br><br><br><strong><br></strong><strong>$725 - 1,000</strong></p>
+                        <p class="card-text">This option has all the features of the basic landing page option and also has the added benefits of custom made web functions available, such as a shopping cart, among other options.  This option has an intermediate turn around time.<br><br><br><br><br><br><strong><br></strong><strong>$725 - $1,000</strong></p>
                         
                     </div>
                 </div>
@@ -212,7 +212,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x133324.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-27" style="background-image: url(assets/images/pexels-photo-2000x1333.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -238,7 +238,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="mR9Jjt6XdX3FnU5mAT13jKHparYHQmH1FmaWv2TRR5N0AhYGsd/8fLmruihNgldspNb9JJKM7e0qNfFiUEGZoltsLPxADFbfDXCj1umYiMrQoX2FRcBSFYrdQX9ftht8" data-form-email="true">
+                        <input type="hidden" value="N2yMMlp2OTBcM1r1Zo7vezIfvNqy5me7T2I2U+gaglueYBd5FBtObkcrnmCEdLnp8kY7nVDuOiK45BWg8TjeNX66p0W3+NRJiMSIGxLb2tGSL3PwMrcC4mltwHrn+VPn" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
