--- a/page6.html
+++ b/page6.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -91,7 +91,7 @@
                   <h3 class="mbr-section-title display-2"><br><br>The Problem Discovery</h3>
                   <div class="lead">
 
-                    <p>Sling started over a cup of coffee when a group of engineering students were having coffee at their favorite cafe. A few sips of esspresso into their conversation, they realized the independent cafe didn't have a website or their favorite Thai restaurant. How would the rest of the world discover the hand crafted apple cider, espresso drink, with hand made whipped  or pad Thai noodles with egg plant? Would the world come to an end?  <br><br>No worries, some coffee and Thai food obsessed engineering students were to the rescue. After discussing the issue further, the engineers realized that many of the local, small businesses they regularly frequented did not have a web presence. <br><br>With further market research and customer interviews, they discovered the major barriers for the small businesses were cost, lack of understanding of web development tools and limited time.<br><br>From this converation, over a cup of coffee, Sling came to be. Sling aims offer simple, affordable, yet elegant and effective technology solutions for small businesses to conquer the web giant.<br></p>
+                    <p>Sling started over a cup of coffee when a group of engineering students were having coffee at their favorite cafe. A few sips of esspresso into their conversation, they realized the independent cafe didn't have a website or their favorite Thai restaurant. How would the rest of the world discover the hand crafted apple cider, espresso drink, with hand made whipped cream or pad Thai noodles with egg plant? Would the world come to an end?  <br><br>No worries, some coffee and Thai food obsessed engineering students were to the rescue. After discussing the issue further, the engineers realized that many of the local, small businesses they regularly frequented did not have a web presence. <br><br>With further market research and customer interviews, they discovered the major barriers for the small businesses were cost, lack of understanding of web development tools and limited time.<br><br>From this converation, over a cup of coffee, Sling came to be. Sling aims offer simple, affordable, yet elegant and effective technology solutions for small businesses to conquer the web giant.<br></p>
 
                   </div>
 
@@ -200,7 +200,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="JL4N8LuO1jr/JNvZGALeARCABUWrLuTtDgr8GOuM8nE0H9HAFnCm0JOJEz2g0Bmklp/36W0Ck4nkCxves/qd4+oRbkDNVUbTQ6vWOH3cDcOYPcgEcm0vHwAjlQuWbltz" data-form-email="true">
+                        <input type="hidden" value="3T5YZuhXCPPHyEKmCxqkzikVSJAYNn1H2XhoPUlZfPabPaRMubje5ioEi3aoryUENlFxZplw+XnbXZyzRlbuhM11hJ5nISRvHGuK56MqZPR0qFyBcRxUOncy1HAex5Hn" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
