--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -238,7 +238,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="N2yMMlp2OTBcM1r1Zo7vezIfvNqy5me7T2I2U+gaglueYBd5FBtObkcrnmCEdLnp8kY7nVDuOiK45BWg8TjeNX66p0W3+NRJiMSIGxLb2tGSL3PwMrcC4mltwHrn+VPn" data-form-email="true">
+                        <input type="hidden" value="GL1bU9RFEKtoon2P0Rk+GHLLh9Y6SPG+NMmS4TfxN3P9MZBXHApr6mUOdCwANzAyeUp3OBycu6vUtdT3pZeSIlA3JD8UIH1UoVNHZ5ccKsd4EcF1UUpjfhqs+wUM4Imj" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
