--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="form1-2p" style="background-image: url(assets/images/pexels-photo-2000x1333-2.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="form1-2p" style="background-image: url(assets/images/pexels-photo-2000x1333-2.png); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -83,7 +83,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="UFDmPyOc5EmIFwJFQ2OHfQxjQ0hgBqt2nnBedVBldIt5P7GRhYe2EMi61hUsxNVSwsjdfIGrpp1ChE/R3QfqJJtflmG6t4ASdR1nrfVtcTNnUVokkGqGrtOwsdGZzPYz" data-form-email="true">
+                        <input type="hidden" value="l8aF28g2ISIrmy7VYpYaNb693WlJme3pNxRJyBqJwuJhQjTnk7mS3uKwX1oiYCWjLzHElFxiVn+A8/MbftAfxLvFYtJQiJ13A/6ZC99AVGJBoZqi2V/dzZWxM4TIgkr4" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
