--- a/page7.html
+++ b/page7.html
@@ -57,74 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="form1-2p" style="background-image: url(assets/images/pexels-photo-2000x1333-2.png); padding-top: 120px; padding-bottom: 120px;">
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
-    </div>
-    <div class="mbr-section mbr-section__container mbr-section__container--middle">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 text-xs-center">
-                    <h3 class="mbr-section-title display-2">CONTACT FORM</h3>
-                    <small class="mbr-section-subtitle">Come slay some giants with us!&nbsp;</small>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="mbr-section mbr-section-nopadding">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
-
-
-                    <div data-form-alert="true">
-                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">anks for filling out the form! Get ready to slay some giants! </div>
-                    </div>
-
-
-                    <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
-
-                        <input type="hidden" value="HhSHH3X5lelV1JkzTYlzsulQdmK1GYY12QLGKpbAJWfP+ToF3itABLEZlqhdQLtWAOt+ZLyb4StJ20rV9uz6rGc9xbjJrAPDGUfuMsg+pX128U1eTqjmV7MdAMXFBMH0" data-form-email="true">
-
-                        <div class="row row-sm-offset">
-
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-2p-name">Name<span class="form-asterisk">*</span></label>
-                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2p-name">
-                                </div>
-                            </div>
-
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-2p-email">Email<span class="form-asterisk">*</span></label>
-                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2p-email">
-                                </div>
-                            </div>
-
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-2p-phone">Phone</label>
-                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2p-phone">
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="form-group">
-                            <label class="form-control-label" for="form1-2p-message"></label>
-                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2p-message"></textarea>
-                        </div>
-
-                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!&nbsp;</button></div>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-info mbr-section mbr-section-md-padding" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -268,7 +201,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-2s" style="background-image: url(assets/images/mbr-2000x25000.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-2s" style="background-image: url(assets/images/mbr-2000x25001.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -294,7 +227,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="7C86TrW/Uy5WlAKop+z8kBV0veK/aOd+XOCbp7KMvM+MQNpa3ouYK6H4UyokmSuXjkGqziccZlnYoXV3feJDF6i119GFzjx2rjgPGLyHKn5HtZL5cIVznetwf5Js24R3" data-form-email="true">
+                        <input type="hidden" value="m+sj1ttO3eZ1YiUIsBzWv8QMCVLwquXRKxQYPQESFf7zAYbwzFP2RG7TLZ5IHu7bSXcjnJywksBaeaGa18VlAZcHnbRj5iKOUsazxDLNlO8g/hbzJMdeCm+9RNTgvsUK" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
