--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -201,7 +201,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-2s" style="background-image: url(assets/images/mbr-2000x25001.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-2s" style="background-image: url(assets/images/mbr-2000x25004.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -227,7 +227,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="m+sj1ttO3eZ1YiUIsBzWv8QMCVLwquXRKxQYPQESFf7zAYbwzFP2RG7TLZ5IHu7bSXcjnJywksBaeaGa18VlAZcHnbRj5iKOUsazxDLNlO8g/hbzJMdeCm+9RNTgvsUK" data-form-email="true">
+                        <input type="hidden" value="Wo9X9eIeCjbaMkPfTAxqDgpsKYkOrBSF1ZVaVoonVOM04WXUP+ohtiFki2h4oq8hZLd/RKpCgvaX5saE6890HMgzp+yp/CSc6W+GZNtUbXf5fEICosdExlr6wg35fF9n" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
