--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="true">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="page7.html#form1-27">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -201,7 +201,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="cwixDtpedyAEG5c7/R514AYlypfe6gVSArSbiDTcTrp6MfxzbqWys2jN+/w7cqWjHapTwuoq2Mj5puGY1LlmAAgkBYNFUM7bWFBeZ1lG0y6Rkwgby61NHQ1pfngySM00" data-form-email="true">
+                        <input type="hidden" value="z/L6fXUrlBojqu+CjkkL2pZ/HU/RAdUYoVb6EF+qBIvcWgVL2n0I/P4BbwsScPfahMVJQhoe3Su0CZE8DHDgiZfVbSnp/mkI2oBLRcMUvqy2VWq+YuzmjT4MqBRg2qdH" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
