--- a/page7.html
+++ b/page7.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="page7.html#form1-27">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -238,7 +238,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="eoj+m6eVSDnObPmS+q2Fb7CW18Ok0IAIxIY5em0nckHb39J7XmtlaHFzFIpvEiVe5J+QCtPh5sDU7ek/d3wwzmYU/TPGwF+XLL3UukFUd8NKKWOVY5ANNoBh7gh5U0OJ" data-form-email="true">
+                        <input type="hidden" value="3bGoJsDquowaH0LOSWzsWRf7mPLeKdnAc6++vwTTb5feMaHJqf0HZNvpvHjqi66K0xtdLxk6dscMOOov22v87Mn80SoOWfulsDHegOnszxkNzGwkTe6D3HsmocqGZFUO" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
