--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -201,7 +201,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="mhkgH5s8Vjtp+zHIjIfuDU5zUXnEYdY8WzP4BCoNEyQhEvk0P3pyhz6fAR6/9bwRsnVQCHd0Ufm2uBCpVRna/vVmEGl8PbCbOtKxUTlsW+145I2jNFYHvPTkUbhbYsEL" data-form-email="true">
+                        <input type="hidden" value="pLRwnCTfreXbL/hR10sL4k8A5r9/AEM3k3trVrYrSGljIfjikunmmnQRIqR24iFTtcKSMkxSBjmqd7q61vQNrNVz4aAwi7FQzinh+Om0saaxXJVNWGGFQCRO+xooiA19" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
