create github pages

--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -149,7 +149,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Multi- Page Website from Existing Sling Template<br><br></h4>
                         <h5 class="card-subtitle"><br><br></h5>
-                        <p class="card-text">This is a great option for small business owners with some traction in their entrepreneurial journey and have multiple products/services to offer, such as a product catalog, blog, online resources or community for customers.  This option also has a quick turn around time.<br><br><br><strong><br></strong><br><strong><br></strong><strong>$825</strong><br></p>
+                        <p class="card-text">This is a great option for small business owners with some traction in their entrepreneurial journey and have multiple products/services to offer, such as a product catalog, blog, online resources or community for customers.  This option also has a quick turn around time.<br><br><br><strong><br></strong><br><strong>$825</strong><br></p>
                         
                     </div>
                 </div>
@@ -238,7 +238,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="fYfvr51AmIn0zWqNdx2dG2SAnFQcrkfkExGmoweo1EtNDq/7ux2+PhS9KcA7sKC637Yome6YscRX2UwvJq1joDmNy6BEi/Y2Q86hBrjY6U7okiesl/pCd6PAwg7nMks0" data-form-email="true">
+                        <input type="hidden" value="QFs4ZUAsDxsaiJamVVrKaY2BilIhU6/pO2+T7zeOQEpkdejk4mQfhGpAq8ipksYg3+qm66tlEcaNR/N1+dQNOdC1tmghoFh4+g8qLcwKxhyt49pM2WXancLx6jmhsI0+" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
