--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -201,7 +201,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="fP3TpTCb6rHUdH06ipvy/qD2YJsb0ahM4R+i/Ac8InB7k+xh9YA3mDG8QtqBEQLEy55iNTP9eJ8+lWua2b2/R2Vt0ETj5FJqrWHTm97pme9F0xJWRwW2h8kLKcNG55Hp" data-form-email="true">
+                        <input type="hidden" value="cqz/GQk6zV0Hx1zeJ9rJqHVPvdt5WxEiJdFWxfEb5ljiiHmMhN1pWGr0u6XV0DbzxUYlB6QFm5iv5KaMPVSnpFvDQtsFe4rbG6RFlEbv9X94prIAc7dH62uwvLcyK/n3" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
