--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -263,7 +263,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="OR+fvrVuQE1yWtZsJQVgRM/jFI5v28lTmGCUanePxw2zyexfj12I8JeUiy0WJegpqI9Lh94a3Cg1DqAQ4iUQzRALG3qdeYqa9OM+WZniqJTWP/t6DWNSlQRATnodnNXa" data-form-email="true">
+                        <input type="hidden" value="XnLqvsdJeOWv/ZAbtpbTg8ScJvylWA5CO8cOCMLAv+jB/nUmmoqjLMhAz8jFIzZHGVqy7Hq20fDA+w5tzu+lqgQOmb9ToDm77lPu/RgK2vKNFpXMI4jOTEON6teesMi3" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
