--- a/RecentWork.html
+++ b/RecentWork.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -128,7 +128,7 @@
                                 <p></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-primary" href="https://howtohackalgebra.site" target="_blank">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-primary" href="https://thegiantslayers.github.io/HowtoHackAlgebra/" target="_blank">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 48%;">
@@ -251,7 +251,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="dOGP0ZcgKNT/ymxwqZM2IYEhIeuVPLpB9rA4d6161pDjoNyHZxmOlvud07Kv++8kHkrth7k+lgszWOwtKb1IihjOPrXg8ob2gjiRF2+FB0ZJkUElU3Y4XkueX5e6pX0n" data-form-email="true">
+                        <input type="hidden" value="KcSqhL84jVwNjVZuisvLBELKezrugTxRIqP/2TMaDbWL1lnesPKSbF+ekepNfMCcgceeGnR3qmyBWzq8wQW5Na9YbHSFKZi1b5SvIHaJRTCFlBaWxmrI5PJfm+205NqG" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
