--- a/RecentWork.html
+++ b/RecentWork.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -144,7 +144,7 @@
                                 <p></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-primary" href="https://HowtoHackAlgebra/" target="_blank">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-primary" href="https://howtohackalgebra.site" target="_blank">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 48%;">
@@ -267,7 +267,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="syXJVEoyS9H1P/XAfLluh8jBKCUrRizEhPbzTrzxBkc0MiWcQsV892jhYVE4hcibNC4IcvBbCRqVuZdo8CaDnTqmWJqdLy8eHe0jYHOhyASLE8+dyy12kQxzRzl6qCNZ" data-form-email="true">
+                        <input type="hidden" value="yW03JkkrIMrEGQkSeXVYm+XEan6hKG1Pgt2m1QrALYXuTh+WmHUf7ZDJJNVav4UF72vOZ8zOe39AcWeXCzS93AL29GWa43skjzkyzBNLGFymdvrLRsK883iM3kD+he0S" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
